--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-vk",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vk-io/authorization": "0.0.0-alpha.1",
+    "axios": "^0.19.2",
+    "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "vk-io": "^4.0.0-rc.30",
     "vue": "^2.6.11"
   },
   "devDependencies": {
