--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "lint": "vue-cli-service lint",
     "deploy": "vue-cli-service ftpdeploy --genHist --diffFileOnly --ftpCfgPath /ftpdeploy/ --ftpHistPath /ftpdeploy/",
     "production": "npm run build && npm run deploy",
-    "heroku": "git add -A && git commit -m \"Update\" && git push heroku master && heroku logs --tail --dyno=web"
+    "heroku": "git add -A && git commit -m \"Update\" && git push heroku master && heroku logs --tail --dyno=web",
+    "start": "nodemon -L server.js"
   },
   "dependencies": {
     "@vk-io/authorization": "0.0.0-alpha.1",
     "axios": "^0.19.2",
     "buefy": "^0.8.20",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "force-ssl-heroku": "^1.0.2",
+    "path": "^0.12.7",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
+    "serve-static": "^1.14.1",
     "vk-io": "^4.0.0-rc.30",
     "vue": "^2.6.11"
   },
