--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "force-ssl-heroku": "^1.0.2",
+    "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
