--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vk-io/authorization": "0.0.0-alpha.1",
     "axios": "^0.19.2",
+    "axios-jsonp-pro": "^1.1.8",
     "buefy": "^0.8.20",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
