--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "pug-plain-loader": "^1.0.0",
     "serve-static": "^1.14.1",
     "vk-io": "^4.0.0-rc.30",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-axios-cors": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
